# zxy-template-api

./: .env.example  Dockerfile  README.md  SECURITY.md  fly.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
app/: config.py  database.py  logging_config.py  main.py
app/middleware/: rate_limit.py
app/routers/: health.py  payments.py
tests/: test_health.py
