[tool.poetry]
name = "zxy-template-api"
version = "0.1.0"
description = "ZXY Ventures — FastAPI boilerplate"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic-settings = "^2.2.0"
supabase = "^2.3.0"
stripe = "^8.0.0"
slowapi = "^0.1.9"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
ruff = "^0.3.0"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
